kong/enterprise/k8-ingress-kong-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong 
  namespace: cp
spec:
  controller: ingress-controllers.konghq.com/kong
